overlays/gitlab/01-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: GITLAB_NAMESPACE_PLACEHOLDER
